--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title> robieSun</title>
   </head>
   <body>
-        Hello my name is Robie.
+    <h1>"Hello, Code School!"</h1>
   </body>
+  <ul>
+    <li> Java</li>
+    <li> SQL</li>
+    <li> C#</li>
+    <li> Database</li>
+  </ul>
+
+
 </html>
