--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title> robieSun</title>
   </head>
   <body>
-    <h1>"Hello, Code School!"</h1>
-  </body>
-  <ul>
-    <li> Java</li>
-    <li> SQL</li>
-    <li> C#</li>
-    <li> Database</li>
-  </ul>
 
+    <h1>'Hello, Code School!'</h1>
+
+  <ul>
+    <li> JavaScript</li>
+    <li> Angular.js</li>
+    <li> Ruby</li>
+
+  </ul>
+  </body>
 
 </html>
