--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <title> robieSun</title>
   </head>
   <body>
-
-    <h1>'Hello, Code School!'</h1>
-
+    <h1> Hello my name is Robie</h1>
+    <h1>Hello,Code School!.</h1>
   <ul>
     <li> JavaScript</li>
     <li> Angular.js</li>
     <li> Ruby</li>
-
   </ul>
   </body>
-
 </html>
